# working_with_databases_1

./: README.md  pyproject.toml
src/: api.py  area_selector.py  constants.py  db_manager.py  functions.py  main.py  models.py
tests/: test_api.py  test_vacancy.py
