[tool.poetry]
name = "working-with-databases-1"
version = "0.1.0"
description = ""
authors = ["Deadmau5"]
readme = "README.md"
packages = [{include = "working_with_databases_1"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^7.4.0"
psycopg2 = "^2.9.6"
coverage = "^7.2.7"
pydantic = "^2.1.1"
bleach = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
